# worldcountrygroups

./: .gitignore  LICENSE  README.md  pyproject.toml
countrygroups/: __init__.py  api.py  cli.py  core.py  models.py
countrygroups/data/groups/: acd.json  acp.json  ag.json  aosis.json  au.json  brics.json  canz.json  caricom.json  cegpl.json  cplp.json  eac.json  eu.json  g20.json  g77.json  gcc.json  ida.json  las.json  lmc.json  nam.json  nordic.json  oas.json  oecd.json  osce.json  umcs.json  un.json  weog.json  zangger.json
scripts/: analyze_speeches.py  download_missing_speeches.py  download_speeches.py  import_ungdc.py
site/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
site/assets/css/: main.css
site/components/: AppFooter.vue  AppHeader.vue  CountryBadge.vue  CountryInfoCard.vue  DomainTag.vue  GroupCard.vue  GroupStats.vue  SearchBar.vue  SectionNav.vue
site/components/charts/: ChartBar.vue  ChartHeatmap.vue  ChartLine.vue  ChartRadar.vue  ChartRangeSlider.vue  ChartSparkline.vue  ChartTooltip.vue
site/components/compare/: CompareBarCell.vue  CompareConflict.vue  CompareDiplomacy.vue  CompareGDELT.vue  CompareMilitary.vue  CompareOverlap.vue  CompareSelector.vue  CompareStats.vue  CompareVoting.vue
site/components/intelligence/: BilateralPrep.vue  BilateralSelector.vue  CountryBriefing.vue  CountrySelector.vue  GroupSelector.vue  GroupTrends.vue
site/composables/: useAuth.ts  useBookmarks.ts  useGroups.ts  useIndicators.ts  useIntelligence.ts  useSearch.ts  useSectionNav.ts  useThemes.ts
site/middleware/: admin.ts  auth.global.ts
site/pages/: about.vue  account.vue  compare.vue  conflicts.vue  dashboard.vue  index.vue  intelligence.vue  login.vue  pending.vue  register.vue  sources.vue  speeches.vue  votes.vue
site/pages/admin/: index.vue  login.vue
site/pages/countries/: [iso].vue  index.vue
site/pages/groups/: [gid].vue  (+1 more)
tests/: test_api.py  test_core.py  test_models.py
worldcountrygroups/: __init__.py  cli.py  models.py
(+204 files in other folders)
