[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "worldcountrygroups"
version = "0.1.0"
description = "Query international country groupings (EU, BRICS, G20, NATO, etc.)"
authors = ["Tomas Gonzalez <tomasgonz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tomasgonz/countrygroups"
repository = "https://github.com/tomasgonz/countrygroups"
keywords = ["countries", "groups", "iso", "geopolitics", "international"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "countrygroups"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
fastapi = {version = ">=0.100", optional = true}
uvicorn = {version = ">=0.20", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
countrygroups = "countrygroups.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
httpx = ">=0.24"

[tool.pytest.ini_options]
testpaths = ["tests"]
